@@ -1,1 +1,7 @@
 # Lab7
+
+Ramon Dhami
+Johnathan Li
+J Santos
+
+Link to repository: https://github.com/Lab7-XML/Lab7
